// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList renders List component 1`] = `
<View>
  <List
    headerComponent={
      <Header
        title="Todo List"
      />
    }
    renderItem={[Function]}
  />
</View>
`;

exports[`TodoList renders error component 1`] = `
<View>
  <Error
    message="An error occured."
  />
</View>
`;

exports[`TodoList renders loading component 1`] = `
<View>
  <Loading />
</View>
`;
